// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Draw Ranges > Boundary Ranges 1`] = `
[
  {
    "count": 2095,
    "materialIndex": 1,
    "start": 0,
  },
]
`;

exports[`Draw Ranges > Boundary Ranges 2`] = `
[
  {
    "count": 2094,
    "materialIndex": 0,
    "start": 0,
  },
  {
    "count": 1,
    "materialIndex": 1,
    "start": 2094,
  },
]
`;

exports[`Draw Ranges > Boundary Ranges 3`] = `
[
  {
    "count": 2094,
    "materialIndex": 0,
    "start": 0,
  },
  {
    "count": 1,
    "materialIndex": 1,
    "start": 2094,
  },
]
`;

exports[`Draw Ranges > Mixed Ranges 1`] = `
[
  {
    "count": 36,
    "materialIndex": 0,
    "start": 0,
  },
  {
    "count": 36,
    "materialIndex": 1,
    "start": 36,
  },
  {
    "count": 144,
    "materialIndex": 0,
    "start": 72,
  },
  {
    "count": 1323,
    "materialIndex": 0,
    "start": 216,
  },
  {
    "count": 540,
    "materialIndex": 0,
    "start": 1539,
  },
  {
    "count": 32268,
    "materialIndex": 0,
    "start": 2079,
  },
]
`;

exports[`Draw Ranges > Mixed Ranges 2`] = `
[
  {
    "count": 36,
    "materialIndex": 0,
    "start": 0,
  },
  {
    "count": 36,
    "materialIndex": 1,
    "start": 36,
  },
  {
    "count": 108,
    "materialIndex": 0,
    "start": 72,
  },
  {
    "count": 1395,
    "materialIndex": 1,
    "start": 180,
  },
  {
    "count": 504,
    "materialIndex": 0,
    "start": 1575,
  },
  {
    "count": 32268,
    "materialIndex": 0,
    "start": 2079,
  },
]
`;

exports[`Draw Ranges > Mixed Ranges 3`] = `
[
  {
    "count": 36,
    "materialIndex": 0,
    "start": 0,
  },
  {
    "count": 36,
    "materialIndex": 1,
    "start": 36,
  },
  {
    "count": 108,
    "materialIndex": 0,
    "start": 72,
  },
  {
    "count": 1395,
    "materialIndex": 1,
    "start": 180,
  },
  {
    "count": 6,
    "materialIndex": 0,
    "start": 1575,
  },
  {
    "count": 32766,
    "materialIndex": 1,
    "start": 1581,
  },
]
`;

exports[`Draw Ranges > Multiple Materials 1`] = `
[
  {
    "count": 36,
    "materialIndex": 3,
    "start": 0,
  },
  {
    "count": 257,
    "materialIndex": 4,
    "start": 36,
  },
  {
    "count": 1246,
    "materialIndex": 1,
    "start": 293,
  },
  {
    "count": 540,
    "materialIndex": 0,
    "start": 1539,
  },
  {
    "count": 32268,
    "materialIndex": 2,
    "start": 2079,
  },
]
`;
